--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "zfcampus/zf-development-mode": "^3.0",
         "zendframework/zend-mvc-form": "^1.0",
         "doctrine/doctrine-orm-module": "^1.1",
-        "doctrine/migrations": "^1.5"
+        "doctrine/migrations": "^1.5",
+        "zendframework/zend-session": "^2.7"
     },
     "autoload": {
         "psr-4": {
